# fava-edit-replay

./: README.md  TODO.md  __init__.py  cli.py  diff2text.py  pyproject.toml  replay.py
src/fava_edit_replay/: EditReplay.js  __init__.py  cli.py  helpers.py  replay.py
src/fava_edit_replay/templates/: home.html  list-replays.html  style.css
templates/: EditReplay.html  home.html
